trying to check for CUDA but not working

--- a/ucc_bench/Makefile
+++ b/ucc_bench/Makefile
@@ -13,7 +13,7 @@ CFLAGS = -I$(UCC_INSTALL)/include \
 
 LDFLAGS = -L$(UCC_INSTALL)/lib -lucc \
           -L$(UCX_INSTALL)/lib -lucp -lucs -luct \
-          -L$(CUDA_HOME)/lib64 -lcudart -lcuda
+          -L$(CUDA_HOME)/lib64 -lcudart
 
 RPATH = -Wl,-rpath,$(UCC_INSTALL)/lib \
         -Wl,-rpath,$(UCX_INSTALL)/lib \
